--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@ bottom: 0;
 </header>
 <main>
 <h2>Sobre mí</h2>
-<p>Esta es una página de ejemplo creada para demostrar cómo alojar una página web en GitHub Pages.</p>
+<p>Hola mi nombre es Randall Ordoñez tengo 25 años de edad, estoy en 4to año de la carrera Ing. En tegnologias , soy aficionado a los video juegops y a las tegnologias nuevas  </p>
 <img src="https://via.placeholder.com/150" alt="Imagen de ejemplo" />
 </main>
 <footer>
