--- a/index1.html
+++ b/index1.html
@@ -37,10 +37,10 @@ bottom: 0;
 <main>
 <h2>Sobre mí</h2>
 <p>Hola mi nombre es Randall Ordoñez tengo 25 años de edad, estoy en 4to año de la carrera Ing. En tegnologias , soy aficionado a los video juegops y a las tegnologias nuevas  </p>
-<img src="https://via.placeholder.com/150" alt="Imagen de ejemplo" />
+<img src="Randall.jpg" alt="Imagen de ejemplo" width="700" height="500"/>
 </main>
 <footer>
-<p>© 2024 Mi Nombre</p>
+<p>© 2024 Randall Ordoñez </p>
 </footer>
 </body>
 </html>
